Add AsyncVirtualThreadExecutor